--- a/Czaplinski_Lukasz_prog3/makefile
+++ b/Czaplinski_Lukasz_prog3/makefile
@@ -3,10 +3,10 @@ LD=LD_RUN_PATH=$(shell pwd) gcc
 LDR=$$LD_RUN_PATH
 CFLAGS=-std=gnu99 -Wall -Wextra -Werror -g
 LFLAGS=-Wl,-export-dynamic
-EXC=2 3 4 5 6 7 8 1
-TRASH=*.o $(EXC) .depend 1RTL 1LTL lib1.so
+EXC=3 4 5 6 7 8 1
+TRASH=*.o $(EXC) .depend 1RTL 1LTL lib1.so lib2.so
 
-all: .depend $(EXC) 1RTL 1LTL
+all: .depend $(EXC) 1RTL 1LTL lib2.so
 
 clean : 
 	-rm -f $(TRASH)
@@ -38,6 +38,10 @@ libP%.o : libP%.c libP%.h
 lib1.so : libP1.o libP2.o libP3.o
 	$(LD) -fPIC -shared -o lib1.so libP1.o libP2.o libP3.o
 
+lib2.so : lib2.c
+	$(CC) -fPIC -shared -c $(CFLAGS) -export-dynamic libP2.c
+	$(LD) -fPIC -shared -o lib2.so lib2.o
+
 1LTL : 1.c lib1.so
 	$(CC) $(CFLAGS) -DLTL -export-dynamic -c 1.c
 	$(LD) $(LFLAGS) -o 1LTL 1.o lib1.so
@@ -45,3 +49,7 @@ lib1.so : libP1.o libP2.o libP3.o
 1RTL : 1.c
 	LD_RUN_PATH=$(shell pwd) $(CC) $(CFLAGS) $(LFLAGS) -ldl -DRTL -o 1RTL 1.c
 
+2Test : lib2.so 2.c
+	$(CC) $(CFLAGS) -export-dynamic -c 2.c
+	$(LD) $(LFLAGS) -o 2Test 2.o lib2.so
+	
