--- a/Czaplinski_Lukasz_prog3/makefile
+++ b/Czaplinski_Lukasz_prog3/makefile
@@ -4,7 +4,7 @@ LDR=$$LD_RUN_PATH
 CFLAGS=-std=gnu99 -Wall -Wextra -Werror -g
 LFLAGS=-Wl,-export-dynamic
 EXC=3 4 5 6 7 8 1
-TRASH=*.o $(EXC) .depend 1RTL 1LTL lib1.so lib2.so
+TRASH=*.o $(EXC) .depend 1RTL 1LTL lib1.so lib2.so 2Test
 
 all: .depend $(EXC) 1RTL 1LTL lib2.so
 
@@ -39,7 +39,7 @@ lib1.so : libP1.o libP2.o libP3.o
 	$(LD) -fPIC -shared -o lib1.so libP1.o libP2.o libP3.o
 
 lib2.so : lib2.c
-	$(CC) -fPIC -shared -c $(CFLAGS) -export-dynamic libP2.c
+	$(CC) -fPIC -shared -c $(CFLAGS) -export-dynamic lib2.c
 	$(LD) -fPIC -shared -o lib2.so lib2.o
 
 1LTL : 1.c lib1.so
