--- a/Czaplinski_Lukasz_prog3/makefile
+++ b/Czaplinski_Lukasz_prog3/makefile
@@ -1,8 +1,8 @@
 CC=gcc
 LD=LD_RUN_PATH=$(shell pwd) gcc
 LDR=$$LD_RUN_PATH
-CFLAGS=-std=gnu99 -Wall -Wextra -g
-LFLAGS=-Wl,-export-dynamic
+CFLAGS=-std=gnu99 -Wall -Wextra -Werror -g
+LFLAGS=-Wl,-export-dynamic -lbsd
 EXC=3 4 5 6 7 8 1
 TRASH=*.o $(EXC) .depend 1RTL 1LTL lib1.so lib2.so 2Test
 
